fix a naming problem
